Projet GL/test/src/test/deca/codegen/valid/created/incr1/int.deca
//Description
//Test of integers 
{
    int x = 3;
    println(x);
}