Projet GL/test/src/test/deca/codegen/invalid/created/wrongboolean2.deca
//Description
//Wrong typecast boolean 
{
    boolean x = 5;
}